--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
 			<version>5.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.3m</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
