--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>faces-servlet</servlet-name>
-    <url-pattern>/faces/*</url-pattern>
+    <url-pattern>/TwitterGreen/*.xhtml</url-pattern>
   </servlet-mapping>
 </web-app>
